2009-02-10  Andreas Kupries  <andreask@activestate.com>

	* checker_idx.tcl (index_end): Allow empty index (no keys).
	* docidx.tcl: Bumped package to vrsion 1.0.1. Updated the
	* docidx.test: documentation, where not already in alignment.
	* docidx_lang_intro.man: Extended testsuite. Fixed small typo
	* docidx_lang_syntax.man: orthogonal to this change.
	* pkgIndex.tcl: Fixes [SF Tcllib Bug 2557107].

2009-01-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* docidx.tcl: Extended the plugin APIs for all formats with a new
	* docidx_plugin_apiref.man: command "dt_read" to read a file's
	* doctoc.tcl: contents into a plugin. Modified the nroff plugins
	* doctoc_plugin_apiref.man: to inline the man.macros file into
	* doctools.tcl: their result instead of generating a
	* doctools.test: '.so man.macros' command. Stuart Cassoff
	* doctools_plugin_apiref.man: <stwo@users.sourceforge.net> did the
	* mpformats/_nroff.tcl: work and provided the patches as part of
	* mpformats/fmt.nroff: his effort on making a Tcllib OpenBSD port.
	* mpformats/idx.nroff: 
	* mpformats/toc.nroff:

2009-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* checker.tcl: Fixed bug in handling 'category' command. Bumped
	* doctools.tcl: version to 1.4.1
	* doctools.man:
	* pkgIndex.tcl:

	* changelog.man: Added 'category' information to all manpages.
	* cvs.man:
	* docidx.man:
	* docidx_intro.man:
	* docidx_lang_cmdref.man:
	* docidx_lang_faq.man:
	* docidx_lang_intro.man:
	* docidx_lang_syntax.man:
	* docidx_plugin_apiref.man:
	* doctoc.man:
	* doctoc_intro.man:
	* doctoc_lang_cmdref.man:
	* doctoc_lang_faq.man:
	* doctoc_lang_intro.man:
	* doctoc_lang_syntax.man:
	* doctoc_plugin_apiref.man:
	* doctools.man:
	* doctools_intro.man:
	* doctools_lang_cmdref.man:
	* doctools_lang_faq.man:
	* doctools_lang_intro.man:
	* doctools_lang_syntax.man:
	* doctools_plugin_apiref.man:
	* mpexpand.man:

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*