@@ -1,11 +1,11 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin doctools::toc n 1]
-[copyright {2003-2008 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
+[manpage_begin doctools::toc n 1.1]
+[copyright {2003-2009 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {Documentation tools}]
 [titledesc {doctoc - Processing tables of contents}]
 [category  {Documentation tools}]
 [require Tcl 8.2]
-[require doctools::toc [opt 1]]
+[require doctools::toc [opt 1.1]]
 [description]
 
 This package provides a class for the creation of objects able to
